[package]
name = "async_procfs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
async_hybrid_fs = { git = "https://github.com/khanhtranngoccva/async_hybrid_fs", rev = "15d910076643d9e047a2f34f3b82a01670663fda", version = "0.1.0", features = ["pending-io-futures"] }
backtrace = { version = "0.3.76", optional = true }
bitflags = "2.13.0"
chrono = { version = "0.4.45", optional = true }
futures = "0.3.32"
nix = { version = "0.31.3", features = ["fs"] }
procfs-core = "0.18.0"
rustix = { version = "1.1.4", features = ["fs", "param"] }
tokio = { version = "1.52.3", features = ["fs"] }

[features]
chrono = ["dep:chrono"]
backtrace = ["dep:backtrace", "procfs-core/backtrace"]
